# 2026

./: README.md  nse500_swing_alpha.py  pyproject.toml
.agents/skills/testing-nse500-alpha/: SKILL.md
tests/: test_nse500_swing_alpha.py
